Fixes queue overlap

--- a/webkit/webkit.css
+++ b/webkit/webkit.css
@@ -3682,8 +3682,6 @@ div.profile_page.has_profile_background {
     margin-top: -20px !important;
     margin-bottom: 0px !important;
 }
-.queue_overflow_ctn {
-    margin-top: -20px !important;
 }
 
 /* This is the part for the Group page Banner */
